# c2pa-c

./: .dockerignore  .envrc.example  .gitignore  05-coverage-reporting.md  CMakeLists.txt  CONTRIBUTING.md  CROSS_PLATFORM_FIXES.md  Cargo.toml  Dockerfile  Dockerfile.test  Doxyfile  GUIDE_embeddable_signing.md  HARDENING_PLAN.md  Makefile  PLAN.md  PLAN_context_variations.md  README.md  REFACTORING_PLAN.md  build.rs  c2pa_build.py  cbindgen.toml  check_mime.cpp  deny.toml  fixes.md  signer_c_ffi.md  test_detail.json
.claude/: settings.json
.cursor/rules/: git-workflow.mdc
.github/: update_c2pa.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-docs.yml  release.yml  run-with-c2pa-branch.yml  update_c2pa.yml
build_debug/: CTestTestfile.cmake  Makefile
build_debug/examples/: CTestTestfile.cmake  Makefile  demo  training
build_debug/src/: CTestTestfile.cmake  Makefile
build_debug/tests/: CTestTestfile.cmake  Makefile  c2pa_c_tests  ctest
ci-cd/: amalgam-build.md  lsan_suppressions.txt  run-with-c2pa-branch.md
cicd/: lsan_suppressions.txt
docs/: c_api.md  context-settings.md  context.md  doxygen-extra.css  embeddable-api.md  faqs.md  intents.md  release-notes.md  selective-manifests.md  settings.md  usage.md  working-stores.md
examples/: CMakeLists.txt  context_demo.cpp  demo.cpp  emscripten_example.cpp  ingredient_folder.cpp  training.cpp
include/: c2pa.h  c2pa.hpp  file_stream.h
plans/: 01-security-edge-cases.md  02-error-handling.md  05-coverage-reporting.md
scripts/: amalgamate.cmake  generate_api_docs.sh
src/: CMakeLists.txt  c2pa.cpp  c2pa_amalgam.cpp  c2pa_builder.cpp  c2pa_c.udl  c2pa_context.cpp  c2pa_core.cpp  c2pa_embeddable_pipeline.cpp  c2pa_internal.hpp  c2pa_reader.cpp  c2pa_settings.cpp  c2pa_signer.cpp  c2pa_stream.rs  c2pa_streams.cpp  c_api.rs  c_signer.rs  c_stream.rs  cpp_io_stream.h  error.rs  json_api.rs  lib.rs  signer.rs  signer_info.rs
tests/: CMakeLists.txt  README.md  builder.test.cpp  c2pa.h  c2pa.py  cmd_signer.cpp  cmd_signer.hpp  context.test.cpp  embeddable.test.cpp  error_handling.test.cpp  file_stream.h  main.c  read_file.test.cpp  reader.test.cpp  rust.rs  test.c  test.cpp  test.py  test_c2pa.py  test_signer.cpp  test_signer.hpp  test_unit_tests.py  test_utils.hpp  unit_test.h  version.test.cpp
tests/c-app-test/: file_stream.h  test.c
tests/cpp-app-test/: cmd_signer.cpp  cmd_signer.hpp  test.cpp
tests/fixtures/: base-path-manifest.json  training.json
tests/fixtures/settings/: test_settings_all.json  test_settings_all.toml  test_settings_example.json  test_settings_example.toml  test_settings_no_thumbnail.json  test_settings_no_thumbnail.toml  test_settings_with_signer.json  test_settings_with_thumbnail.json  test_settings_with_thumbnail.toml  test_trust_settings.toml
tests/include/: test_utils.hpp
