[package]
name = "c2pa-c"
version = "0.7.2"
edition = "2021"
authors = ["Gavin Peacock <gpeacock@adobe.com"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread","rt"] }
cawg-identity = "0.12.0"
c2pa = { version = "0.49.2", features = [
    "file_io",
    "add_thumbnails",
    "fetch_remote_manifests",
    "v1_api",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"

[profile.release]
strip = true # Strip symbols from the output binary.
lto = true   # Enable link-time optimization.
#opt-level = "z"     # Optimize for size.
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = "abort"     # Abort on panic
